<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:businesshome="http://schemas.android.com/apk/res/com.businesshome"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <!-- xmlns:zhy="http://schemas.android.com/apk/res/com.zhy.weixin6.ui" 使用自定义view的时候要命名空间 -->

    <!-- ViewPager设置为0dp weight为1 也就是 除了下面 的线性布局50dp以外的都给ViewPager占据 -->
    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/tabbg"
        android:orientation="horizontal" >

        <com.businesshome.ui.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            businesshome:icon="@drawable/ic_menu_start_conversation"
            businesshome:text="@string/home"
            businesshome:text_size="12sp" />

        <com.businesshome.ui.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            businesshome:icon="@drawable/ic_menu_friendslist"
            businesshome:text="@string/luntan"
            businesshome:text_size="12sp" />

        <com.businesshome.ui.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            businesshome:icon="@drawable/ic_menu_emoticons"
            businesshome:text="@string/race"
            businesshome:text_size="12sp" />

        <com.businesshome.ui.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            businesshome:icon="@drawable/ic_menu_allfriends"
            businesshome:text="@string/policy"
            businesshome:text_size="12sp" />
    </LinearLayout>

</LinearLayout>